# HipMCL

./: .gitignore  CMakeLists.txt  README.md  license.txt  makefile-mac  makefile-nersc
Testing/Temporary/: CTestCostData.txt
scripts/: CopyFromCombBLAS.sh
src/: CC.h  HipMCL.cpp  WriteMCLClusters.h  makefile-mac  makefile-nersc
src/CombBLAS/: CMakeLists.txt  SpImpl.cpp  SpImpl.h
src/CombBLAS/ReleaseTests/: ReadWriteMtx.cpp
src/CombBLAS/graph500-1.2/generator/: Makefile  cmake_install.cmake  generator_test_seq
src/CombBLAS/graph500-1.2/generator/generator_test_seq.dSYM/Contents/: Info.plist
src/CombBLAS/graph500-1.2/generator/generator_test_seq.dSYM/Contents/Resources/DWARF/: generator_test_seq
src/CombBLAS/include/CombBLAS/: ParFriends.h  SpParMat.cpp
src/CombBLAS/usort/: cmake_install.cmake  makefile  parUtils.tcc
src/CombBLAS/usort/include/: ompUtils.tcc  parUtils.tcc  seqUtils.tcc
src/CombBLAS/usort/src/: main-short.cpp  main.cpp
test/: hepth.hipmcl  hipmcl-run-hepth.sh
test/NERSC_examples/: Metaclust50_2048node_Cori_KNL.sh  archaea_nersc_edison.sh  eukarya_nersc_cori_KNL.sh  eukarya_nersc_edison.sh  isolate3_2048node_Cori_KNL.sh  readme.txt  virus_nersc_cori_KNL.sh  virus_nersc_edison.sh
test/laptop_examples/: virus_triples.sh
test/small_scale_examples/: hepth_mtx.sh  sevenvertex.sh  virus_triples.sh
